--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,9 @@ small{
 .footer-col-2 input[type="email"] {
     flex: 1;
     padding: 10px;
+    margin-left: -10px !important;
     text-align: center;
-    font-family: 'comic sans ms';
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 100px;
@@ -418,7 +419,7 @@ button:hover{
     
     h1{
         margin-left: -60px;
-    }
+    }  
 }
 
 @media screen and (max-width: 500px){
@@ -429,12 +430,10 @@ button:hover{
     nav ul{
         flex-direction: column;
         text-align: center;
-    }
-    
+    }       
 }
 @media screen and (max-width:541px){
     .offer ,.offer-img{
         padding: 0 !important;
     }
-    
 }
