--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,56 @@ p{
     padding-left: 25px;
     padding-right: 25px;
 }
+
+/* features at home page*/
+.features {
+    width: 100%;
+    padding: 20px;
+    background-color: radial-gradient(#f4eef2,#f4eef2);
+}
+
+#features h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.feature-row {
+    display: flex;
+    justify-content: space-around;
+}
+
+.feature-item {
+    width: 30%; 
+    margin-bottom: 20px;
+    border-radius: 1px;
+    background-color: white;
+}
+
+.feature-item h3 {
+    color: black;
+    margin-bottom: 10px;
+}
+
+.feature-item p {
+    color: black;
+}
+
+.feature-item img {
+    width: 20%;  
+    height: 50px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+.row h3{
+    text-align: center;
 }
 .col-2{
     flex-basis: 50%;
@@ -118,6 +163,9 @@ nav ul li a:hover{
     padding-left: 25px;
     padding-right: 25px;
 }
+.small-container p {
+    text-align: center;
+}
 .col-4{
     flex-basis: 25%;
     padding: 10px;
@@ -134,7 +182,7 @@ nav ul li a:hover{
     margin: 0 auto 80px;
     position: relative;
     line-height: 60px;
-    color: #555;
+    color: #222988;
 }
 .title::after{
     content: '';
@@ -147,23 +195,48 @@ nav ul li a:hover{
     left: 50%;
     transform: translateX(-50%);
 }
-h4{
-    color: #555;
+.col-4 h4{
+    color: black;
     font-weight: normal;
+    font-size: large;
 }
 .col-4 p{
     font-size: 14px;
 }
-.rating {
-    color: #cd0709;
-}
+
 .col-4:hover{
     transform: translateY(-5px);
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 /* Offer */
 .offer{
-    background: radial-gradient(#f4eef2,#f4eef2);
+    background: white;
     margin-top: 80px;
     padding: 30px 0;
 }
@@ -171,7 +244,7 @@ h4{
     padding: 50px;
 }
 small{
-    color: #555;
+    color: black;
 }
 
 /* footer */
