--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
     }
 }
 body * {
-    animation: slideIn 2s;
+    animation: slideIn 1s;
 }
 
 .navbar{
@@ -538,5 +538,55 @@ button:hover{
 @media screen and (max-width:541px){
     .offer ,.offer-img{
         padding: 0 !important;
+    }
+}
+
+
+/* button */
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 2rem;
+    height: 2rem;
+    background: #f4eef2;
+    box-shadow: none;
+    cursor: pointer;
+    padding: 0;
+    z-index: 10;
+}
+
+.hamburger-menu span {
+    width: 2rem;
+    height: 0.25rem;
+    background: #333;
+    border-radius: 10px;
+    transition: all 0.3s linear;
+    position: relative;
+    transform-origin: 1px;
+}
+
+@media screen and (max-width: 580px) {
+    .navbar {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .logo a{
+        order: 1;
+        margin-right: 160px ;
+    }
+
+    #items {
+        display: none;
+    }
+
+    .hamburger-menu {
+        order: 2;
+        display: flex;
+        margin-left: 300px;
+        margin-top: -30px;
+
     }
 }
