--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ a{
     font-size: 25px;
     color:#af0505;
     text-decoration: none;
+    margin-top: 120rem;
 }
 p{
     color: black;
@@ -93,6 +94,8 @@ p{
     justify-content: center;
     align-items: center;
 }
+
+
 
 .row{
     display: flex;
@@ -486,7 +489,7 @@ button:hover{
     }
     #items{
         display: block;
-        margin: 50px 0;
+        margin-top: 30px;
         line-height: 30px;
     }
     #get{
@@ -544,8 +547,7 @@ button:hover{
 
 @media screen and (max-width: 580px) {
     .navbar {
-        display: flex;
-        justify-content: flex-end;
+        display: inline;
         align-items: center;
     }
 
@@ -554,6 +556,14 @@ button:hover{
         margin-right: 160px ;
     }
 
+    .fa-cart-shopping{
+        margin-left: 15rem;
+        font-size: 23px;
+        margin-top: 30px;
+    }
+    span{
+        margin-bottom: -20px;
+    }
     #items {
         display: none;
     }
@@ -561,8 +571,8 @@ button:hover{
     .hamburger-menu {
         order: 2;
         display: flex;
-        margin-left: 300px;
-        margin-top: -30px;
+        margin-left: 350px;
+        margin-top: -34px;
 
     }
      
