contactForm db and title

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ small{
     text-align: center;
     text-decoration: none;
     padding: 16px;
+    margin-bottom: 30px;
     font-family: 'Poppins', sans-serif;
 }
 .footer-col-2 h3 {
